# nodo33-sasso-digitale

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  EXPLORATION_REPORT.md  Procfile  README.md  README_LLM.md  STARTUP_GUIDE.md  VERSION.md  codex_server.py  docker-compose.yml  emmanuel.py  llm_tool.py  luce_check.py  main.py  metrics.json  nodo33_agent_manager.py  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  sasso_server.py  server.py
nodo33-main/: .claude.json  .dockerignore  .editorconfig  .env.example  .gitignore  .n33mem  AGENTS.md  BRIDGE_UPGRADE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_NOTES.md  CODEX_SERVER_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_FINAL.sh  DEPLOY_GIFT.sh  DISTRIBUTION_CHECKLIST.md  DISTRIBUTION_COMPLETE_GUIDE.md  DISTRIBUTION_FILES_MANIFEST.txt  DISTRIBUTION_MASTER.md  DISTRIBUTION_README.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  Dockerfile  ENTERPRISE_GUIDE.md  EXTENDED_TOOLS_README.md  FEATURES_IMPLEMENTATION_LOG.md  GETTING_STARTED.md  LICENSE  Makefile  P2P_DEPLOYMENT.md  P2P_README.md  P2P_SYSTEM_SUMMARY.md  PHASE_2_COMPLETION_REPORT.md  PRIMO_CONTATTO_P2P_644.md  PROJECT_SUMMARY.md  PROMPTS_CLAUDE_CODEX.md  README.md  README_P2P_SYSTEM.md  (+67 more)
nodo33-main/AXIOM_FRAMEWORK_UFFICIALE/: 01_DICHIARAZIONE_UNIVERSALE.md  02_PROTOCOLLO_INTERNAZIONALE.md  03_STANDARD_TECNICO_IEEE_ISO.md  04_PROPOSTA_LEGGE_MODELLO.md  05_DIALOGO_FONDANTE_CASO_STUDIO.md  README.md
nodo33-main/BIBLE_COMMANDMENTS_FRAMEWORK/: README.md
nodo33-main/CODEX_SASSODIGITALE_PENTESTING/: README.md  codex_sassodigitale_pentesting.json  codex_sassodigitale_pentesting.yaml
nodo33-main/CODEX_SASSO_DIGITALE_MCP_0_1_8/: API_MCP_Catalogs.md  README.txt  README_Codex_SassoDigitale.md  ROADMAP_0.2.0.md  codex_note_personale.txt  mcp_manifest.example.json
nodo33-main/GIARDINO_ALIGNMENT_PROTOCOL/: README.md
nodo33-main/PROGETTO_SASSO_DIGITALE/: Makefile  README.md  build.sh
nodo33-main/agents/: anti_addiction.py  base.py  guardian_ethics.py  light_agent.py  malta_scanner.py  registry.yaml  safe_companion.py
nodo33-main/anti_porn_framework/: README.md  pyproject.toml
nodo33-main/backups/: backup_metadata.json
nodo33-main/codex/: __init__.py
nodo33-main/codex_deus/: codex_integrato.json  coerenza_dinamica.py  entropia_armonica.py  (+2 more)
(+293 files in other folders)
