[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "luce-non-si-vende"
version = "0.1.0"
description = "Framework emotivo 644. Emmanuel – La luce non si vende."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Emmanuel 644" },
  { name = "Codex CLI" },
]
license = { text = "La luce non si vende." }

[project.scripts]
luce-check = "luce_non_si_vende.cli:main"

[tool.setuptools]
packages = ["luce_non_si_vende"]

