# Codex Nodo33 - Enterprise Edition
# Project configuration

[project]
name = "codex-nodo33"
version = "2.0.0-enterprise"
description = "Claude-Codex Bridge with Enterprise Features"
authors = [
    {name = "Nodo33 - Sasso Digitale"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Spirit of Gift"}

dependencies = [
    "anthropic>=0.18.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
enterprise = [
    "ratelimit>=2.2.1",
    "keyring>=24.3.0",
    "prometheus-client>=0.19.0",
    "circuitbreaker>=1.4.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.9",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
